# pascalc

./: .gitignore  pyproject.toml
examples/: from-book.pas  test.pas
pascalc/: __init__.py  ast.py  lexer.py  parser.py
pascalc/ast/: factor.py  procedure.py
tests/: test_pascalc.py
