[tool.poetry]
name = "pascalc"
version = "0.1.0"
description = ""
authors = ["maxcohn <maxc4321@gmail.com>"]

[tool.poetry.scripts]
main = "pascalc:main"

[tool.poetry.dependencies]
python = "^3.7"
sly = "^0.4"
graphviz = "^0.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
